create srtucture edit pages

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,11 @@
     <body>
         <header></header>
         <div class="workPlace"></div>
+        <div class="table"></div>
         <footer class="text-center">
-            <span>Разработчик <a href="https://github.com/Space647">Борисевич Глеб</a></span>
+            <span>Developer
+                <a href="https://github.com/Space647">Борисевич Глеб</a>
+            </span>
         </footer>
         <script src="./script/app.js"></script>
     </body>
